<resources>

    <string name="app_name">NaviGone</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_navi_gone">NaviGone</string>
    <string name="originHint">Origin</string>
    <string name="destinationHint">Destination</string>
    <string name="submit_Button">Submit</string>
    <string name="enteredOrigin"></string>
    <string name="enteredDestination"></string>
    <string name="enteredTime"></string>
    <string name="timeHint">Time</string>
    <string name="enteredDate"/>

</resources>