
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/submit_Button" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/enteredOrigin"
            android:ems="10"
            android:hint="@string/originHint"
            android:inputType="text"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button1"
            android:contentDescription="@string/enteredDestination"
            android:ems="10"
            android:hint="@string/destinationHint" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:contentDescription="@string/enteredTime"
            android:gravity="left"
            android:hint="Time"
            android:text="@string/enteredTime"
            android:textSize="22sp" />

    </RelativeLayout>
